# ProgettoFisica

./: .gitignore  README.md
Calcolo/: CMakeLists.txt  Cell.cxx  Cell.hxx  CiclicVector.hxx  Definitions.hxx  Environnement.hxx  Fire.cxx  Fire.hxx  Fuel.hxx  Main.cxx  Vertex.cxx  Vertex.hxx
Calcolo/Classi/: CMakeLists.txt
Calcolo/Classi/Include/: CiclicVector.hxx  Environment.hxx  Fire.hxx  Vertex.hxx
Calcolo/Classi/src/: Cell.cxx  CiclicVector.cxx  Environment.cxx  Fire.cxx  Vertex.cxx  WaveFront.cxx
Calcolo/Librerie/: CMakeLists.txt
Calcolo/include/: CiclicVector.hxx  Definitions.hxx  Fire.hxx  Rothermel.hxx  Vertex.hxx
Calcolo/src/: Fire.cxx  Vertex.cxx
ClassiCalcolo_inizio/: Definizioni.hxx
ClassiCalcolo_inizio/Include/: BurningFuel.hxx  Fuel.hxx  Landa.hxx
ClassiCalcolo_inizio/src/: BurningFuel.cxx  Fuel.cxx  Landa.cxx
ClassiLion/: Cell.cxx  Cell.hxx  CiclicContainer.cxx  CiclicContainer.hxx  Definitions.hxx  Environnement.cxx  Fire.cxx  Fire.hxx  Fuel.cpp  Fuel.h  Fuel.hxx  Rothermel.cxx  Rothermel.hxx  Vertex.cxx  Vertex.hxx  WaveFront.cxx  WaveFront.hxx
Test/: CMakeLists.txt
Test/Applicazione/: Definitions.hxx  Main.cxx
Test/Applicazione/Classi/: CMakeLists.txt
Test/Applicazione/Classi/Include/: Fire.hxx
Test/Applicazione/Classi/src/: Environnement.cxx  Fire.cxx  Vertex.cxx
Test/Applicazione/Librerie/src/: Rothermel.cxx
build-gui-Desktop_Qt_5_15_2_clang_64bit-Debug/: CMakeCache.txt  FuelTypes.txt  Makefile  cmake_install.cmake  gui
build-gui-Desktop_Qt_5_15_2_clang_64bit-Debug/.cmake/api/v1/reply/: cache-v2-ae5854447f3edbf0ead0.json  cmakeFiles-v1-05aa21960bda484b4bb6.json  codemodel-v2-a8077da7b2be9ac61d36.json  index-2020-11-29T16-25-30-0906.json  target-Cell-Debug-f5b99e256cf51bef89ff.json  target-Cell_autogen-Debug-6e1114b5e4dd052b3353.json  target-CiclicVector-Debug-ccd02333264db20c039b.json  target-CiclicVector_autogen-Debug-3ec69fa40173d7e37fd9.json  target-Environment-Debug-9b96f99d5dc85108906d.json  target-Environment_autogen-Debug-6bb4267c331d77251ef9.json  target-Fire-Debug-9e679c4b1aff31ac1212.json  target-Fire_autogen-Debug-3b404dab0b064573ecb3.json  target-Fuel-Debug-387050412733bcbc6fb2.json  target-Fuel_autogen-Debug-641c2906f195ffe0d6d8.json  target-Rothermel-Debug-46dfc93406db24072b0b.json  target-Rothermel_autogen-Debug-24de9c68965de70fd039.json  (+6 more)
build-gui-Desktop_Qt_5_15_2_clang_64bit-Debug/Classi/: Makefile  cmake_install.cmake
build-gui-Desktop_Qt_5_15_2_clang_64bit-Debug/Classi/Fuel_autogen/: moc_predefs.h
build-gui-Desktop_Qt_5_15_2_clang_64bit-Debug/Librerie/: Makefile  cmake_install.cmake
build-gui-Desktop_Qt_5_15_2_clang_64bit-Debug/gui_autogen/: moc_predefs.h
build-gui-Desktop_Qt_5_15_2_clang_64bit-Debug/gui_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_resources.cpp
build-gui-Desktop_Qt_5_15_2_clang_64bit-Debug/gui_autogen/include/: ui_mainwindow.h
gui/: CMakeLists.txt  Definitions.hxx  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  white.qrc
gui/Classi/Include/: Cell.hxx  CiclicVector.hxx  Environment.hxx  Fire.hxx  Fuel.hxx  PriorityQueue.hxx  WaveFront.hxx
gui/Classi/src/: Cell.cxx  Environment.cxx  Fire.cxx  Fuel.cxx  PriorityQueue.cxx  Vertex.cxx  WaveFront.cxx
gui/File/: FuelTypes.txt  FuelTypesTabbed.txt  FuelsData.xlsx
gui/File/Models/: Barriera.for  BarrieraMezzo.for  BarrieraMezzo2.for  ParcoMartina.for  ParcoMartina2.for  ParcoMartinaConMontagne2.for  ParcoMartinaConMonte.for  Prova.for
gui/Librerie/Include/: Rothermel.hxx  Rothermel2.hxx
gui/Librerie/src/: Rothermel.cxx  Rothermel2.cxx
